@@ -1,3 +1,11 @@
+2003-11-11  Bruno Haible  <bruno@clisp.org>
+
+	* size_max.m4: New file.
+	* ptrdiff_max.m4: New file.
+	* xsize,m4 (gl_XSIZE): Require gl_SIZE_MAX.
+	* xalloc.m4 (gl_PREREQ_XALLOC): New file.
+	(gl_XALLOC): Invoke it.
+
 2003-11-04  Bruno Haible  <bruno@clisp.org>
 
 	* xsize.m4: New file.
